--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ margin-left: auto;
 .header {
     padding-top: 25.5px;
     padding-bottom: 25.5px;
+    border-bottom: 1px solid #e7e9fc;
 }
 .header-navigation {
     display: flex;
@@ -132,7 +133,9 @@ color: var(--color-text);
 }
 
 /*-----------hero------------*/
-.hero {background: var(--navyblue, #2E2F42);}
+.hero {background: var(--navyblue, #2E2F42);
+    padding: 188px 0;
+}
 
 .hero-title {
     color: #ffffff;
@@ -145,7 +148,7 @@ color: var(--color-text);
        margin: 0 auto;
        width: 496px;
        margin-bottom: 48px;
-    padding: 188px 0;
+    max-width: 496px;
 }
 
 
@@ -231,7 +234,7 @@ padding-bottom: 292px;
 /*-----------team------------*/
 .team {
 background-color: #F4F4FD;
-padding-bottom: 120px 0;
+padding: 120px 0;
 }
 
 
