--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,7 @@ margin-top: 96px;
     flex-basis: calc((100 - 48px) / 3);
     padding-bottom: 32px;
     background: var(--white, #FFF);
+    border: 1px solid #e7e9fc;
 }
 
 .portfolio-text {
@@ -429,5 +430,5 @@ margin-top: 96px;
     
 }
 .portfolio-text-cont {
-    margin: 32px 16px;
+    padding: 32px 16px;
 }
