--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ margin-top: 96px;
 }
 
 .portfolio-list {
-    
+
 }
 
 .portfolio-btn {
@@ -386,10 +386,10 @@ margin-top: 96px;
 }
 
 .portfolio-item {
-    flex-basis: calc((100 - 48px) / 3);
+    width: calc((100 - 48px) / 3);
     padding-bottom: 32px;
     background: var(--white, #FFF);
-    border: 1px solid #e7e9fc;
+    
 }
 
 .portfolio-text {
@@ -431,4 +431,5 @@ margin-top: 96px;
 }
 .portfolio-text-cont {
     padding: 32px 16px;
+    border: 1px solid #e7e9fc;
 }
